--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -197,6 +197,9 @@
 								<CheckBox      Grid.Row="3" Grid.Column="3" Margin="2" Content="Set readonly mode on minimize"  IsChecked="{Binding Settings.LockOnMinimize}" />
 								<ctrl:PHelpBtn Grid.Row="3" Grid.Column="4" HelpProperty="LockOnMinimize" Margin="2,0" VerticalAlignment="Center" />
 
+								<CheckBox      Grid.Row="4" Grid.Column="3" Margin="2" Content="Auto hide menubar"  IsChecked="{Binding Settings.AutoHideMainMenu}" />
+								<ctrl:PHelpBtn Grid.Row="4" Grid.Column="4" HelpProperty="AutoHideMainMenu" Margin="2,0" VerticalAlignment="Center" />
+
 							</Grid>
 						</GroupBox>
 
