--- a/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
@@ -229,16 +229,16 @@
 
 
 		<Button Grid.Row="0" Grid.Column="0" Margin="2" Padding="0" FontWeight="Bold" x:Name="TagChoosePopupButton"
-				Focusable="False"
+		        Focusable="False"
 		        Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
 		        Foreground="{ext:ThemeBinding 'window.tageditor.tagbutton:foreground'}" 
 		        Background="{ext:ThemeBinding 'window.tageditor.tagbutton:background'}" 
 		        BorderThickness="{ext:ThemeBinding 'window.tageditor.tagbutton:border_thickness'}"
 		        BorderBrush="{ext:ThemeBinding 'window.tageditor.tagbutton:border'}" 
 		        Visibility="{Binding Settings.ShowTagButton, Converter={conv:BoolToVisibility}, ConverterParameter=Visible;Collapsed}"
-				IsEnabled="{Binding Readonly, Converter={conv:NegateBool}}"
+		        IsEnabled="{Binding Readonly, Converter={conv:NegateBool}}"
 		        Command="{Binding ShowTagChooserCommand}">
-			<Image Grid.Column="0" Source="{ext:ThemeBinding 'tag.png', ResType='ImageSource'}" Margin="2" />
+			<Image Grid.Column="0" Source="{ext:ThemeBinding ThemeKey='tag.png', ResType='ImageSource'}" Margin="2" />
 		</Button>
 
 
