--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -16,7 +16,7 @@
 		WindowStartupLocation="CenterOwner"
 		Closed="DialogWindow_Closed"
 		Icon="/Resources/IconMain.png"
-		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="750" Width="700">
+		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="800" Width="700">
 	<Window.Resources>
 		<locconv:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -170,35 +170,51 @@
 							<Grid>
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="1*" />
-									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 									<ColumnDefinition Width="10" />
 									<ColumnDefinition Width="1*" />
-									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 								</Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+
+								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Hide tag search button"  IsChecked="{Binding Settings.HideTagChooser}" />
+
+								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Auto hide menubar"  IsChecked="{Binding Settings.AutoHideMainMenu}" />
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="4" HelpProperty="AutoHideMainMenu" Margin="2,0" VerticalAlignment="Center" />
+
+								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Use vertical layout"  IsChecked="{Binding Settings.VerticalMainLayout}" />
+
+							</Grid>
+						</GroupBox>
+
+						<GroupBox Header="Readonly mode" Padding="4">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
+									<ColumnDefinition Width="10" />
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
-								<CheckBox      Grid.Row="2" Grid.Column="0" Margin="2" Content="Readonly mode"  IsChecked="{Binding Settings.IsReadOnlyMode}" />
-								<ctrl:PHelpBtn Grid.Row="2" Grid.Column="1" HelpProperty="IsReadOnlyMode" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Readonly mode"  IsChecked="{Binding Settings.IsReadOnlyMode}" />
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="IsReadOnlyMode" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="3" Grid.Column="0" Margin="2" Content="Show readonly lock icon"  IsChecked="{Binding Settings.ShowReadonlyLock}" />
-								<ctrl:PHelpBtn Grid.Row="3" Grid.Column="1" HelpProperty="ShowReadonlyLock" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Show readonly lock icon"  IsChecked="{Binding Settings.ShowReadonlyLock}" />
+								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="ShowReadonlyLock" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="4" Grid.Column="0" Margin="2" Content="Hide tag search button"  IsChecked="{Binding Settings.HideTagChooser}" />
+								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Set readonly mode on startup"  IsChecked="{Binding Settings.LockOnStartup}" />
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="4" HelpProperty="LockOnStartup" Margin="2,0" VerticalAlignment="Center" />
 
-								<CheckBox      Grid.Row="2" Grid.Column="3" Margin="2" Content="Set readonly mode on startup"  IsChecked="{Binding Settings.LockOnStartup}" />
-								<ctrl:PHelpBtn Grid.Row="2" Grid.Column="4" HelpProperty="LockOnStartup" Margin="2,0" VerticalAlignment="Center" />
-
-								<CheckBox      Grid.Row="3" Grid.Column="3" Margin="2" Content="Set readonly mode on minimize"  IsChecked="{Binding Settings.LockOnMinimize}" />
-								<ctrl:PHelpBtn Grid.Row="3" Grid.Column="4" HelpProperty="LockOnMinimize" Margin="2,0" VerticalAlignment="Center" />
-
-								<CheckBox      Grid.Row="4" Grid.Column="3" Margin="2" Content="Auto hide menubar"  IsChecked="{Binding Settings.AutoHideMainMenu}" />
-								<ctrl:PHelpBtn Grid.Row="4" Grid.Column="4" HelpProperty="AutoHideMainMenu" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="1" Grid.Column="3" Margin="2" Content="Set readonly mode on minimize"  IsChecked="{Binding Settings.LockOnMinimize}" />
+								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="4" HelpProperty="LockOnMinimize" Margin="2,0" VerticalAlignment="Center" />
 
 							</Grid>
 						</GroupBox>
@@ -207,46 +223,23 @@
 							<Grid>
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 									<ColumnDefinition Width="10" />
 									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 								</Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
-								<Grid Grid.Row="0" Grid.Column="0">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
-									<Grid.RowDefinitions>
-										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
-									</Grid.RowDefinitions>
-									
-									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Minimize to tray" IsChecked="{Binding Settings.MinimizeToTray}" />
+								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Minimize to tray" IsChecked="{Binding Settings.MinimizeToTray}" />
 
-									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Always on top" IsChecked="{Binding Settings.AlwaysOnTop}" />
+								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Close to tray" IsChecked="{Binding Settings.CloseToTray}" />
+								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="CloseToTray" Margin="2,0" VerticalAlignment="Center" />
 
-								</Grid>
+								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Always on top" IsChecked="{Binding Settings.AlwaysOnTop}" />
 
-								<Grid Grid.Row="0" Grid.Column="2">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
-									<Grid.RowDefinitions>
-										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
-									</Grid.RowDefinitions>
-
-									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Close to tray" IsChecked="{Binding Settings.CloseToTray}" />
-									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="CloseToTray" Margin="2,0" VerticalAlignment="Center" />
-								</Grid>
 							</Grid>
 						</GroupBox>
 
@@ -254,49 +247,25 @@
 							<Grid>
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 									<ColumnDefinition Width="10" />
 									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" MinWidth="20" />
 								</Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
-								<Grid Grid.Row="0" Grid.Column="0">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
-									<Grid.RowDefinitions>
-										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
-									</Grid.RowDefinitions>
+								<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Remember scroll position per note (permanent)"  IsChecked="{Binding Settings.RememberScroll}" />
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
 
-									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Remember scroll position per note (permanent)"  IsChecked="{Binding Settings.RememberScroll}" />
-									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Remember scroll position per note (per session)"  IsChecked="{Binding Settings.RememberScrollPerSession}" />
+								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
 
-									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Remember scroll position per note (per session)"  IsChecked="{Binding Settings.RememberScrollPerSession}" />
-									<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
+								<CheckBox      Grid.Row="0" Grid.Column="3" Margin="2" Content="Auto focus editor" IsChecked="{Binding Settings.AutofocusScintilla}" />
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="4" HelpProperty="AutofocusScintilla" Margin="2,0" VerticalAlignment="Center" />
 
-								</Grid>
-
-								<Grid Grid.Row="0" Grid.Column="2">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="Auto" />
-									</Grid.ColumnDefinitions>
-									<Grid.RowDefinitions>
-										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
-									</Grid.RowDefinitions>
-
-									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Auto focus editor" IsChecked="{Binding Settings.AutofocusScintilla}" />
-									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="AutofocusScintilla" Margin="2,0" VerticalAlignment="Center" />
-
-								</Grid>
 							</Grid>
 						</GroupBox>
 
