Added theme properties for scrollbar visibility of notes-list and folder-list
--> references #136

--- a/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
@@ -45,6 +45,7 @@
 					  services:MultiDataTemplateService.MultiDataTemplateSelector="{Binding Settings.NotePreviewStyle}"
 					  HorizontalContentAlignment="Stretch"
 					  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+					  ScrollViewer.VerticalScrollBarVisibility="{ext:ThemeBinding 'window.notesview.flat.scrollbar_v:visible', Convert='ToScrollBarVisibility'}"
 					  ScrollViewer.CanContentScroll="{Binding Settings.SmoothScrollNotesView, Converter={conv:NegateBool}}"
 					  SelectionMode="{Binding Settings.MultiNoteSelection, Converter={locconv:BoolToListViewSelectionMode}}"
 					  Background="{ext:ThemeBinding 'window.notesview.flat:background'}"
