Added noteapp.hierachycache.config file to save folder-list state (order and expanded state)
--> references #174

--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -233,6 +233,7 @@
 									GridSplitterChanged="VertGridSplitterChanged"
 									ParentAnchor="{Binding ., ElementName=LayoutRoot}"
 									Settings="{Binding Settings}"
+									RepositoryAccountID="{Binding Repository.ConnectionUUID}"
 									AllNotes="{Binding Repository.Notes}" 
 									SelectedNote="{Binding SelectedNote}"
 									SelectedNotesList="{Binding AllSelectedNotes, Mode=OneWayToSource}"
