--- a/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewHierachical.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewHierachical.xaml
@@ -5,9 +5,9 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:self="clr-namespace:AlephNote.WPF.Controls"
 			 xmlns:conv="clr-namespace:MSHC.WPF.Converter;assembly=CSharpUtils"
-			 xmlns:util="clr-namespace:AlephNote.WPF.Util"
 			 xmlns:pi="clr-namespace:AlephNote.PluginInterface;assembly=AlephNote.PluginInterface"
 			 xmlns:settings="clr-namespace:AlephNote.Common.Settings.Types;assembly=AlephNote.Common"
+             xmlns:hier="clr-namespace:AlephNote.Common.Hierachy;assembly=AlephNote.Common"
 			 xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=CSharpUtils"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 			 xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
@@ -63,8 +63,11 @@
 
 				<Style TargetType="{x:Type TreeViewItem}">
 					<Setter Property="IsSelected" Value="{Binding Path=IsSelected, Mode=TwoWay}" />
-					<Setter Property="IsExpanded" Value="{Binding Path=IsExpanded, Mode=TwoWay}" />
-				</Style>
+                    <Setter Property="IsExpanded" Value="{Binding Path=IsExpanded, Mode=TwoWay}" />
+
+                    <EventSetter Event="TreeViewItem.Expanded" Handler="OnTreeExpanded" />
+                    <EventSetter Event="TreeViewItem.Collapsed" Handler="OnTreeCollapsed" />
+                </Style>
 
 				<SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}"     Color="{ext:ThemeBinding 'window.notesview.hierachical.tree.selected:background', Convert='ToColor'}" />
 				<SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}" Color="{ext:ThemeBinding 'window.notesview.hierachical.tree.selected:foreground', Convert='ToColor'}" />
@@ -73,8 +76,8 @@
 				
 			</TreeView.Resources>
 
-			<TreeView.ItemTemplate>
-				<HierarchicalDataTemplate ItemsSource="{Binding SubFolder}" DataType="{x:Type util:HierachicalWrapper_Folder}">
+            <TreeView.ItemTemplate>
+				<HierarchicalDataTemplate ItemsSource="{Binding SubFolder}" DataType="{x:Type hier:HierachicalWrapper_Folder}">
 
 					<StackPanel Orientation="Horizontal">
 						<Image Width="16" Height="16" Margin="2" Stretch="Fill" Source="{Binding ., Converter={locconv:HierachicalWrapperToIcon}}"/>
