--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -772,8 +772,9 @@
 										<RowDefinition Height="Auto"/>
 										<RowDefinition Height="Auto"/>
 										<RowDefinition Height="Auto"/>
-										<RowDefinition Height="Auto"/>
-									</Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="1*" />
 										<ColumnDefinition Width="1*" />
@@ -801,8 +802,12 @@
 
 									<TextBlock     Grid.Row="5" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Show the node [All notes]" />
 									<CheckBox      Grid.Row="5" Grid.Column="1" IsChecked="{Binding Settings.FolderViewShowAllNotesNode}" VerticalAlignment="Center"/>
-									<ctrl:PHelpBtn Grid.Row="5" Grid.Column="2" HelpProperty="FolderViewShowAllNotesNode" Margin="2,0" VerticalAlignment="Center" />
-								</Grid>
+                                    <ctrl:PHelpBtn Grid.Row="5" Grid.Column="2" HelpProperty="FolderViewShowAllNotesNode" Margin="2,0" VerticalAlignment="Center" />
+
+                                    <TextBlock     Grid.Row="6" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Sort directories by custom order" />
+                                    <CheckBox      Grid.Row="6" Grid.Column="1" IsChecked="{Binding Settings.SortHierachyFoldersByCustom}" VerticalAlignment="Center"/>
+                                    <ctrl:PHelpBtn Grid.Row="6" Grid.Column="2" HelpProperty="SortHierachyFoldersByName" Margin="2,0" VerticalAlignment="Center" />
+                                </Grid>
 
 							</Grid>
 						</GroupBox>
